# mxklabs-bootstrap

./: README.md  setup.cfg
src/mxkb/: build.py  config.py  getdeps.py  install.py  main.py
test-configs/: use-hash.nix  use-local.nix
