[metadata]
name = mxkb
version = 0.0.1
author = Mark Kattenbelt
author_email = mark@mxklabs.co.uk
description = Tooling on top of vcpkg for effectively managing dependencies of C++ projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxklabs/mxkb
project_urls =
    Bug Tracker = https://github.com/mxklabs/mxkb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src